# risc16_rs

./: .gitignore  17add.txt  Cargo.toml
backend/: app.py  modules.py
backend/modules/: 1.4_16bSLL.txt  1.5_b15_extract.txt  1.6_32bSLL.txt  1.9_mul.txt
backend/static/: risc.js
backend/templates/: index.html  layout.html  log_done.html
src/: lib.rs  main.rs  risc16.rs
templates/: index.html  layout.html  log_done.html
tests/: bit_extract.txt  inf_loop.txt  mul.txt  mul_2_noinit.txt
webapp/modules/: 1.7_16b_sum_carry.txt  1.8_32b_sum.txt
webapp/static/: risc.js
webapp/templates/: index.html  log_done.html
