[package]
name = "risc16_rs"
version = "0.1.0"
authors = ["Ken <ken@kenh.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "risc16_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
lazy_static = "1"
rayon = "1.1"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]


